--- a/knear-sdk/build.gradle
+++ b/knear-sdk/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'kotlin-android-extensions'
     id 'kotlin-kapt'
     id 'org.jetbrains.kotlin.kapt'
+    id 'maven-publish'
 }
 
 ext {
@@ -94,4 +95,17 @@ dependencies {
 
     implementation files("libs/borshj-0.2.0-SNAPSHOT.jar")
     implementation files("libs/tweetnacl-java-1.1.2.jar")
+}
+
+afterEvaluate {
+    publishing {
+        publications {
+            release(MavenPublication) {
+                from components.release
+                groupId = 'com.knear.android'
+                artifactId = 'near-api'
+                version = '1.0.0'
+            }
+        }
+    }
 }
