--- a/knear-sdk/build.gradle
+++ b/knear-sdk/build.gradle
@@ -11,21 +11,8 @@ ext {
     tweetnaclJavaVersion = '1.1.2'
     cryptoKeyEd25519Version = '0.2.0'
 }
-
 android {
     compileSdk 31
-    afterEvaluate {
-        publishing {
-            publications {
-                release(MavenPublication) {
-                    from components.release
-                    groupId = 'com.knear.android'
-                    artifactId = 'near-api'
-                    version = '1.0.0'
-                }
-            }
-        }
-    }
     defaultConfig {
         minSdk 26
         targetSdk 31
@@ -37,7 +24,7 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -107,4 +94,15 @@ dependencies {
     implementation files("libs/borshj-0.2.0-SNAPSHOT.jar")
     implementation files("libs/tweetnacl-java-1.1.2.jar")
 }
-
+afterEvaluate {
+    publishing {
+        publications {
+            release(MavenPublication) {
+                from components.release
+                groupId = 'com.knear.android'
+                artifactId = 'near-api'
+                version = '1.0.0'
+            }
+        }
+    }
+}
