--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,9 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
-
+    packagingOptions {
+        exclude 'META-INF/*'
+    }
 }
 
 dependencies {
