--- a/settings.gradle
+++ b/settings.gradle
@@ -4,8 +4,8 @@ dependencyResolutionManagement {
         google()
         mavenCentral()
         jcenter() // Warning: this repository is going to shut down soon
+        maven { url "https://jitpack.io" }
     }
 }
 rootProject.name = "near-android-sdk"
 include ':app'
-include ':knear-sdk'
