--- a/settings.gradle
+++ b/settings.gradle
@@ -9,3 +9,4 @@ dependencyResolutionManagement {
 }
 rootProject.name = "near-android-sdk"
 include ':app'
+include ':knear-sdk' // Esto se hace para que cuando se construya el relase en jitpack lo tome el proyecot de la libreria NO REMORVER
